--- a/pretraga.html
+++ b/pretraga.html
@@ -13,10 +13,12 @@
 <body>
   <header>
   <h1>Baza filmova</h1>
-  <p>Dobro došli u najveću bazu filmova!</p>
+  <h2>Dobro došli u najveću bazu filmova!</h2>
 </header>
   <ul class="grid-container">
-    <li><a href="index.html"><button>Naslovna</button></a></li><li><a href="pretraga.html"><button>Pretraga</button</a></li><li><a href="#"><button>Dodaj film</button></a></li>
+    <li><a href="index.html"><button>Naslovna</button></a></li>
+    <li><a href="pretraga.html"><button>Pretraga</button</a></li>
+      <li><a href="#"><button>Dodaj film</button></a></li>
 
 
   </ul>
