--- a/pretraga.html
+++ b/pretraga.html
@@ -17,10 +17,8 @@
 </header>
   <ul class="grid-container">
     <li><a href="index.html"><button>Naslovna</button></a></li>
-    <li><a href="pretraga.html"><button>Pretraga</button</a></li>
-      <li><a href="#"><button>Dodaj film</button></a></li>
-
-
+    <li><a href="pretraga.html"><button>Pretraga</button></a></li>
+    <li><a href="#"><button>Dodaj film</button></a></li>
   </ul>
 
   <main>
