--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Dobro došli u najveću bazu filmova!</h2>
     <ul class="grid-container">
         <li><a href="index.html"><button>Naslovna</button></a></li>
-        <li><a href="pretraga.html"><button>Pretraga</button</a></li>
+        <li><a href="pretraga.html"><button>Pretraga</button></a></li>
         <li><a href="#"><button>Dodaj film</button></a></li>
     </ul>
     </header>
