--- a/pretraga.html
+++ b/pretraga.html
@@ -12,9 +12,9 @@
 
 <body>
   <header>
-  <h1>Baza filmova</h1>
-  <h2>Dobro došli u najveću bazu filmova!</h2>
-</header>
+    <h1>Baza filmova</h1>
+    <h2>Dobro došli u najveću bazu filmova!</h2>
+  </header>
   <ul class="grid-container">
     <li><a href="index.html"><button>Naslovna</button></a></li>
     <li><a href="pretraga.html"><button>Pretraga</button></a></li>
@@ -24,9 +24,7 @@
   <main>
     <section>
 
-      <h2>
-        Pretraga filmova
-      </h2>
+      <h2>Pretraga filmova</h2>
 
       PRETRAŽI:
       <input type="text" placeholder="Pretrazi film"> <br><br>
@@ -35,12 +33,9 @@
 
     </section>
 
-
-
-
     <div id="filmovi"></div>
   </main>
-  <footer>  Kontakt: 011/111-222</footer>
+  <footer> Kontakt: 011/111-222</footer>
   <script src="main.js"></script>
 </body>
 
